ci: download mooncake

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,7 @@ jobs:
           mkdir -p ~/.moon/lib
           tar xf moonbit.tar.gz --directory ~/.moon/bin/
           curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m)/moonrun --output ~/.moon/bin/moonrun
+          curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m)/mooncake --output ~/.moon/bin/mooncake
           chmod +x ~/.moon/bin/moon*
           chmod +x ~/.moon/bin/tcc
           git clone --depth 1 https://github.com/moonbitlang/core.git ~/.moon/lib/core
@@ -149,6 +150,7 @@ jobs:
           New-Item -ItemType Directory -Force -Path "$env:USERPROFILE/.moon/lib"
           Expand-Archive -Path "moonbit.zip" -DestinationPath "$env:USERPROFILE/.moon/bin/" -Force
           Invoke-WebRequest -Uri https://cli.moonbitlang.com/moon-ci/Windows-x86_64/moonrun.exe -OutFile "$env:USERPROFILE/.moon/bin/moonrun.exe"
+          Invoke-WebRequest -Uri https://cli.moonbitlang.com/moon-ci/Windows-x86_64/mooncake.exe -OutFile "$env:USERPROFILE/.moon/bin/mooncake.exe"
           git clone --depth 1 https://github.com/moonbitlang/core.git "$env:USERPROFILE/.moon/lib/core"
           "$env:USERPROFILE\.moon\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
 
@@ -216,6 +218,7 @@ jobs:
           mkdir -p ~/.moon/lib
           tar xf moonbit.tar.gz --directory ~/.moon/bin/
           curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m)/moonrun --output ~/.moon/bin/moonrun
+          curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m)/mooncake --output ~/.moon/bin/mooncake
           chmod +x ~/.moon/bin/moon*
           chmod +x ~/.moon/bin/tcc
           git clone --depth 1 https://github.com/moonbitlang/core.git ~/.moon/lib/core
