ci: windows bleeding release

--- a/.github/workflows/bleeding-release.yml
+++ b/.github/workflows/bleeding-release.yml
@@ -27,7 +27,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, macos-13, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -41,6 +41,7 @@ jobs:
         run: cargo build --release
 
       - name: Bleeding Release Unix
+        if: ${{ matrix.os != 'windows-latest' }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -59,4 +60,29 @@ jobs:
           tar czf ./moonbit-$PLATFORM.tar.gz --directory=./tmp-bins .
           aws s3 cp ./moonbit-$PLATFORM.tar.gz s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$PLATFORM.tar.gz
           aws s3 cp ./moonbit-$PLATFORM.sha256 s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$PLATFORM.sha256
+          aws cloudfront create-invalidation --distribution-id E1KQYZEVEB0TAY --paths "/*"
+
+      - name: Bleeding Release Windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        shell: pwsh
+        run: |
+          $PLATFORM = "windows-x86_64"
+          echo "PLATFORM=$PLATFORM" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Remove-Item -Recurse -Force tmp-bins -ErrorAction SilentlyContinue
+          New-Item -ItemType Directory -Force -Path tmp-bins
+          Invoke-WebRequest -Uri "https://cli.moonbitlang.com/moon-ci/Windows-x86_64.zip" -OutFile moonbit.zip
+          Expand-Archive -Path moonbit.zip -DestinationPath .\tmp-bins
+          Copy-Item .\target\release\moonrun.exe .\tmp-bins
+          Copy-Item .\target\release\moon.exe .\tmp-bins
+          Get-ChildItem .\tmp-bins
+          Push-Location tmp-bins
+          Get-FileHash -Algorithm SHA256 * | ForEach-Object { $_.Hash + "  " + $_.Path.Split("\")[-1] } | Out-File -FilePath ..\moonbit-$env:PLATFORM.sha256 -Encoding utf8
+          Pop-Location
+          Compress-Archive -Path .\tmp-bins\* -DestinationPath .\moonbit-$env:PLATFORM.zip
+          aws s3 cp .\moonbit-$env:PLATFORM.zip s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$env:PLATFORM.zip
+          aws s3 cp .\moonbit-$env:PLATFORM.sha256 s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$env:PLATFORM.sha256
           aws cloudfront create-invalidation --distribution-id E1KQYZEVEB0TAY --paths "/*"
