--- a/.github/workflows/bleeding-release.yml
+++ b/.github/workflows/bleeding-release.yml
@@ -47,7 +47,17 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         run: |
-          PLATFORM=$(uname -s | tr '[:upper:]' '[:lower:]')-$(uname -m | tr '[:upper:]' '[:lower:]')
+          case $(uname -ms) in
+          'Darwin x86_64')
+              PLATFORM=darwin-x86_64
+              ;;
+          'Darwin arm64')
+              PLATFORM=darwin-aarch64
+              ;;
+          'Linux x86_64')
+              PLATFORM=linux-x86_64
+              ;;
+          esac
           echo "PLATFORM=$PLATFORM" >> $GITHUB_ENV
           rm -rf tmp-bins
           mkdir tmp-bins
