--- a/.github/workflows/bleeding-release.yml
+++ b/.github/workflows/bleeding-release.yml
@@ -62,9 +62,11 @@ jobs:
           rm -rf tmp-bins
           mkdir tmp-bins
           curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m).tar.gz --output moonbit.tar.gz
+          curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m)/mooncake --output mooncake
           tar xf moonbit.tar.gz --directory ./tmp-bins/
           cp -L ./target/release/moonrun ./tmp-bins/
           cp -L ./target/release/moon ./tmp-bins/
+          cp -L ./mooncake ./tmp-bins/
           ls ./tmp-bins/
           pushd tmp-bins && shasum -a 256 -- * >../moonbit-$PLATFORM.sha256 && popd
           tar czf ./moonbit-$PLATFORM.tar.gz --directory=./tmp-bins .
@@ -83,9 +85,11 @@ jobs:
           Remove-Item -Recurse -Force tmp-bins -ErrorAction SilentlyContinue
           New-Item -ItemType Directory -Force -Path tmp-bins
           Invoke-WebRequest -Uri "https://cli.moonbitlang.com/moon-ci/Windows-x86_64.zip" -OutFile moonbit.zip
+          Invoke-WebRequest -Uri "https://cli.moonbitlang.com/moon-ci/Windows-x86_64/mooncake.exe" -OutFile mooncake.exe
           Expand-Archive -Path moonbit.zip -DestinationPath .\tmp-bins
           Copy-Item .\target\release\moonrun.exe .\tmp-bins
           Copy-Item .\target\release\moon.exe .\tmp-bins
+          Copy-Item .\mooncake.exe .\tmp-bins
           Get-ChildItem .\tmp-bins
           Push-Location tmp-bins
           Get-FileHash -Algorithm SHA256 * | ForEach-Object { $_.Hash + "  " + $_.Path.Split("\")[-1] } | Out-File -FilePath ..\moonbit-windows-x86_64.sha256 -Encoding utf8
