--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -46,6 +46,7 @@ thiserror.workspace = true
 schemars.workspace = true
 line-index.workspace = true
 nucleo-matcher.workspace = true
+which.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
