--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,6 +162,14 @@ jobs:
 
       - name: Build
         run: cargo build
+
+      - name: Set built binary to PATH (Unix)
+        if: ${{ matrix.os != 'windows-latest' }}
+        run: echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
+      - name: Set built binary to PATH (Windows)
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: Add-Content $env:GITHUB_PATH "$env:GITHUB_WORKSPACE\target\debug"
+
       - name: Versions
         run: cargo run --bin moon version --all
       - name: Bundle core (Unix)
@@ -240,6 +248,14 @@ jobs:
 
       - name: Build
         run: cargo build
+
+      - name: Set built binary to PATH (Unix)
+        if: ${{ matrix.os != 'windows-latest' }}
+        run: echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
+      - name: Set built binary to PATH (Windows)
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: Add-Content $env:GITHUB_PATH "$env:GITHUB_WORKSPACE\target\debug"
+
       - name: Versions
         run: cargo run --bin moon version --all
       - name: Bundle core (Unix)
@@ -316,6 +332,8 @@ jobs:
 
       - name: Build
         run: cargo build
+      - name: Set built binary to PATH (Unix)
+        run: echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
       - name: Versions
         run: cargo run --bin moon version --all
       - name: Bundle core (Unix)
