--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ clap_complete = { version = "4.5.4" }
 schemars = "0.8"
 nucleo-matcher = "0.3.1"
 regex = { version = "1.10.3", default-features = false, features = ["std"] }
+rand = "0.8.5"
 
 [profile.release]
 debug = false
