--- a/crates/moonbuild/Cargo.toml
+++ b/crates/moonbuild/Cargo.toml
@@ -42,6 +42,7 @@ tempfile.workspace = true
 ctrlc.workspace = true
 dissimilar.workspace = true
 line-index.workspace = true
+which.workspace = true
 home.workspace = true
 tokio.workspace = true
 self-replace.workspace = true
