--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ on:
     branches: main
   pull_request:
     branches: main
+  merge_group:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
