--- a/crates/moonrun/Cargo.toml
+++ b/crates/moonrun/Cargo.toml
@@ -30,6 +30,7 @@ serde.workspace = true
 serde_json_lenient.workspace = true
 rand = "0.8.5"
 tracing = "0.1.40"
+once_cell = "1.20.2"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 v8 = "0.106.0"
 
