--- a/.github/workflows/test-on-main.yml
+++ b/.github/workflows/test-on-main.yml
@@ -34,6 +34,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       WECOM_ROBOT_KEY: ${{ secrets.WECOM_ROBOT_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
     steps:
       - uses: actions/checkout@v4
 
@@ -45,6 +48,8 @@ jobs:
       - name: Copy moonc-version file to workspace
         run: |
           cp moonc-version-dont-delete/moonc-version .
+          cat ./moonc-version
+          echo "MOONC_VERSION=$(cat ./moonc-version)" >> $GITHUB_ENV
 
       - uses: dtolnay/rust-toolchain@1.80.0
       - name: Cargo cache
@@ -150,25 +155,54 @@ jobs:
       - name: Notify on fail (windows)
         if: ${{ failure() && matrix.os == 'windows-latest' }}
         run: |
+          moonc -v > moonc_version.txt
+          echo "moonc version: $(cat moonc_version.txt)"
           $body = @{
               msgtype = "text"
               text = @{
-                  content = "🤣 moon ci on windows-latest failed: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{github.run_id}}"
+                  content = "🤣 moon ci on windows-latest failed: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{github.run_id}} moonc version: $(cat moonc_version.txt)"
               }
           } | ConvertTo-Json
 
-          Invoke-RestMethod -Uri "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=$env:WECOM_ROBOT_KEY" -Method Post -ContentType "application/json" -Body $body
+          $last_status = (Invoke-WebRequest -Uri "https://cli.moonbitlang.com/moon-ci/test-on-main-windows-status" -UseBasicParsing).Content
+          echo "last_status: $last_status"
+          if ($last_status -eq "success") {
+            echo "moonc version: $(cat moonc_version.txt)"
+            "failed" | aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-windows-status --content-type text/plain
+            Invoke-RestMethod -Uri "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=$env:WECOM_ROBOT_KEY" -Method Post -ContentType "application/json" -Body $body
+          } else {
+            exit 0
+          }
 
-      - name: notify on fail (unix)
+      - name: Notify on fail (unix)
         if: ${{ failure() && matrix.os != 'windows-latest' }}
         run: |
-          curl "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=$WECOM_ROBOT_KEY" \
-            -H 'Content-Type: application/json' \
-            -d @- <<REQUEST_BODY
-            {
-              "msgtype": "text",
-              "text": {
-                "content": "🤣 moon ci on ${{matrix.os}} failed: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          moonc -v > moonc_version.txt
+          echo "moonc version: $(cat moonc_version.txt)"
+          last_status=$(curl -s "https://cli.moonbitlang.com/moon-ci/test-on-main-unix-status")
+          echo "last_status: $last_status"
+          if [ "$last_status" = "success" ]; then
+            aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-unix-status --content-type text/plain <<< "failed"
+            curl "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=$WECOM_ROBOT_KEY" \
+              -H 'Content-Type: application/json' \
+              -d @- <<REQUEST_BODY
+              {
+                "msgtype": "text",
+                "text": {
+                  "content": "🤣 moon ci on ${{matrix.os}} failed: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} moonc version: $(cat moonc_version.txt)"
+                }
               }
-            }
-          REQUEST_BODY
+              REQUEST_BODY
+          else
+            exit 0
+          fi
+
+      - name: upload success status（Windows）
+        if: ${{ success() && matrix.os == 'windows-latest' }}
+        run: |
+          aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-windows-status --content-type text/plain <<< "success"
+
+      - name: upload success status（Unix）
+        if: ${{ success() && matrix.os != 'windows-latest' }}
+        run: |
+          aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-unix-status --content-type text/plain <<< "success"
