--- a/.github/workflows/test-on-main.yml
+++ b/.github/workflows/test-on-main.yml
@@ -169,9 +169,9 @@ jobs:
 
           $last_status = (Invoke-WebRequest -Uri "https://cli.moonbitlang.com/moon-ci/test-on-main-windows-status" -UseBasicParsing).Content
           echo "last_status: $last_status"
+          "failed" | aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-windows-status --content-type text/plain
           if ($last_status -eq "success") {
             echo "moonc version: $(cat moonc_version.txt)"
-            "failed" | aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-windows-status --content-type text/plain
             Invoke-RestMethod -Uri "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=$env:WECOM_ROBOT_KEY" -Method Post -ContentType "application/json" -Body $body
           } else {
             exit 0
@@ -184,8 +184,10 @@ jobs:
           echo "moonc version: $(cat moonc_version.txt)"
           last_status=$(curl -s "https://cli.moonbitlang.com/moon-ci/test-on-main-unix-status")
           echo "last_status: $last_status"
-          if [ "$last_status" = "success" ]; then
           aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-unix-status --content-type text/plain <<< "failed"
+          if [ "$last_status" != "success" ]; then
+            exit 0
+          fi
           curl "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=$WECOM_ROBOT_KEY" \
             -H 'Content-Type: application/json' \
             -d @- <<REQUEST_BODY
@@ -196,9 +198,6 @@ jobs:
               }
             }
             REQUEST_BODY
-          else
-            exit 0
-          fi
 
       - name: upload success status（Windows）
         if: ${{ success() && matrix.os == 'windows-latest' }}
@@ -211,5 +210,6 @@ jobs:
           aws s3 cp - s3://cli.moonbitlang.com/moon-ci/test-on-main-unix-status --content-type text/plain <<< "success"
 
       - name: refresh cloudfront
+        if: always()
         run: |
           aws cloudfront create-invalidation --distribution-id E1KQYZEVEB0TAY --paths "/*"
