--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ schemars = "0.8"
 nucleo-matcher = "0.3.1"
 regex = { version = "1.10.3", default-features = false, features = ["std"] }
 rand = "0.8.5"
+base64 = "0.22.1"
 
 [profile.release]
 debug = false
