--- a/.github/workflows/test-on-main.yml
+++ b/.github/workflows/test-on-main.yml
@@ -42,6 +42,8 @@ jobs:
         run: git config --global core.autocrlf false
 
       - uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: Checkout moonc-version
         uses: actions/checkout@v4
