--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,13 +88,14 @@ env_logger = "0.10.0"
 thiserror = "1.0"
 test-log = "0.2"
 fs4 = { version = "0.12.0", features = ["sync"] }
-ariadne = { version = "0.4.1", features = ["auto-color"] }
+ariadne = { version = "0.5.0", features = ["auto-color"] }
 clap_complete = { version = "4.5.4" }
 schemars = "0.8"
 nucleo-matcher = "0.3.1"
 regex = { version = "1.10.3", default-features = false, features = ["std"] }
 rand = "0.8.5"
 base64 = "0.22.1"
+once_cell = "1.20.3"
 
 [profile.release]
 debug = false
