ci: move llvm backend ci to end

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,12 +166,6 @@ jobs:
           "$env:USERPROFILE\.moon\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
           "$env:GITHUB_WORKSPACE\target\debug" | Out-File -FilePath $env:GITHUB_PATH -Append
 
-      - name: core for llvm backend
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: |
-          rm -rf ~/.moon/lib/core
-          git clone --depth 1 -b llvm_backend https://github.com/moonbitlang/core.git ~/.moon/lib/core
-
       - name: Setup MSVC
         if: ${{ matrix.os == 'windows-latest' }}
         uses: ilammy/msvc-dev-cmd@v1
@@ -205,12 +199,6 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: cargo clippy --all-targets --all-features -- -D warnings
 
-      - name: Test core on llvm backend (Unix)
-        if: ${{ (matrix.os == 'ubuntu-latest') || (matrix.os == 'macos-latest') }}
-        run: |
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --target llvm
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target llvm
-
       - name: Test core (Unix)
         if: ${{ matrix.os != 'windows-latest' }}
         run: |
@@ -231,6 +219,18 @@ jobs:
           cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target js
           cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target wasm
           cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --doc
+
+      - name: download core for llvm backend
+        if: ${{ (matrix.os == 'ubuntu-latest') || (matrix.os == 'macos-latest') }}
+        run: |
+          rm -rf ~/.moon/lib/core
+          git clone --depth 1 -b llvm_backend https://github.com/moonbitlang/core.git ~/.moon/lib/core
+
+      - name: Test core on llvm backend (Unix)
+        if: ${{ (matrix.os == 'ubuntu-latest') || (matrix.os == 'macos-latest') }}
+        run: |
+          cargo run --bin moon test --source-dir ~/.moon/lib/core --target llvm
+          cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target llvm
 
   stable-test:
     needs: [typo-check, license-header-check]
