--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -310,7 +310,7 @@ jobs:
           cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target wasm-gc
           cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target js
           cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target wasm
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --release --doc
+          cargo run --bin moon test --source-dir ~/.moon/lib/core --doc
       - name: Test core (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
