--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ regex = { version = "1.10.3", default-features = false, features = ["std"] }
 rand = "0.8.5"
 base64 = "0.22.1"
 once_cell = "1.20.3"
+derive_builder = "0.20.2"
 
 [profile.release]
 debug = false
