--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -49,6 +49,7 @@ nucleo-matcher.workspace = true
 which.workspace = true
 regex.workspace = true
 once_cell.workspace = true
+derive_builder.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
